# samutil

./: Makefile  align_eval.1  align_eval.cc  align_eval.h  align_eval_aux.cc  align_eval_aux.h  align_eval_checksort.cc  align_eval_checksort.h  align_eval_coverage.cc  align_eval_coverage.h  align_eval_mask.cc  align_eval_mask.h  align_eval_old.cc  align_eval_raw.cc  align_eval_raw.h  align_eval_sort.cc  align_eval_sort.h  align_eval_sort_old.cc  align_eval_stats.cc  align_eval_stats.h  bam_test.cc  bam_tools.cc  cigar_ops.cc  cigar_ops.h  deal_fastq.cc  fasta2bin.cc  fasta2cisfasta.cc  fastq2fastq.cc  fastq_tools.cc  fastq_tools.h  fastq_type.cc  file_bytes.cc  file_utils.cc  file_utils.h  filter_matching_lines.cc  filter_reads_for_tophat.cc  filter_sam_by_score.cc  find_index_collisions.cc  fragment_generator.cc  fragment_generator.h  (+122 more)
cisortho/: Makefile  Makefile.am  Makefile.in  associate_regions  associate_regions.cc  cisortho.cc  cisortho_funcs.cc  cluster.cc  cluster.h  cluster_base.cc  collection.cc  collection.h  config.status  configure  configure.in  consensus.h  conservation.cc  conservation.txt  display_trie  display_trie.cc  diversity_cluster.cc  dna.cc  dna.h  dnacol.cc  dnacol.h  dnastats.h  enum.cc  enum.h  fasta2cisfasta  filter_maq_pileup  filter_maq_pileup.cc  fold.h  genome_index  genome_index.cc  get_uncovered_regions  getdna_simple  hit.cc  index_trie.h  index_trie_scan.h  input_grammar.hpp  (+28 more)
cisortho/.deps/: associate_regions.Po  cluster.Po  cluster_base.Po  collection.Po  display_trie.Po  diversity_cluster.Po  dna.Po  dna_scanning.Po  dnacol.Po  dnastats.Po  enum.Po  fasta2cisfasta.Po  filter_maq_pileup.Po  genome_index.Po  get_uncovered_regions.Po  getdna_simple.Po  hit.Po  icisj.Po  index_trie.Po  index_trie_scan.Po  litestream.Po  make_dnas_file.Po  misc.Po  nested.Po  pileup_histogram.Po  pwm.Po  region.Po  region_association.Po  search.Po
cisortho/.svn/: all-wcprops  dir-prop-base  entries
cisortho/.svn/text-base/: cisortho_funcs.h.svn-base  cluster_base.h.svn-base  conservation.h.svn-base  diversity_cluster.h.svn-base  dna.cc.svn-base  dna.h.svn-base  dna_scanning.cc.svn-base  dna_scanning.h.svn-base  dna_types.h.svn-base  dnacol.cc.svn-base  dnastats.cc.svn-base  fasta2cisfasta.cc.svn-base  get_uncovered_regions.cc.svn-base  getdna_simple.cc.svn-base  hit.h.svn-base  icisj.cc.svn-base  index_trie.cc.svn-base  index_trie_scan.cc.svn-base  interspersed_regions.cc.svn-base  json.h.svn-base  litestream.cc.svn-base  litestream.h.svn-base  make_dnas_file.cc.svn-base  memory.h.svn-base  misc.h.svn-base  nested.h.svn-base  nuctrie.h.svn-base  parse_funcs.hpp.svn-base  permutation_collection.cc.svn-base  pwm.h.svn-base  region.cc.svn-base  region_association.cc.svn-base  region_association.h.svn-base  regulon.txt.svn-base  specific_cluster.h.svn-base
cisortho/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
dep/: alignment_stats.cc  anomaly.cc  base_qual_strand_reader.h  bqs2jpd.cc  bqslocus.cc  error_estimate.cc  hilbert.cc  hilbert.h  nucleotide_stats.cc  simc.cc  simp.cc  simulation.h  simulation_tools.h  slice_sampling.cc  stats_tools.h  test_dirichlet.cc  tools.cc  tools.h  transformation.cc  transformation.h  transformation_trig.h  trig_transformation.cc  usage_strings.h
dep/.svn/: all-wcprops  entries
dep/.svn/text-base/: alignment_stats.h.svn-base  anomaly_tools.cc.svn-base  anomaly_tools.h.svn-base  base_qual_strand_reader.cc.svn-base  bqs.cc.svn-base  comp.cc.svn-base  dep.cc.svn-base  dep.h.svn-base  dep.mk.svn-base  dirichlet.cc.svn-base  dirichlet.h.svn-base  discomp.cc.svn-base  error_estimate.h.svn-base  integrands.cc.svn-base  (+16 more)
scr/: merge_orphans.plx  test1_sam_extract.sh
test/: matrix_test.cc  matrix_test.d  test_vsscanf.cc
